# solunar_engine

./: .gitignore  CMakeLists.txt  GameSettings.ini  README.md  environment.ini  legal.txt  model_convert.bat  readme_some_in_future.txt
source/solunar/: CMakeLists.txt
source/solunar/core/: CMakeLists.txt  core.cpp  core.h  core_init.cpp  debug.cpp  debug.h  timer.cpp  timer.h
source/solunar/core/file/: contentdevice.cpp  contentdevice.h  contentmanager.cpp  contentmanager.h  datastream.cpp  datastream.h  datastreamfactory.cpp  datastreamfactory.h  filestream.cpp  filestream.h  filesystem.cpp  filesystem.h  filesystem_pack.cpp  filesystem_pack.h  filesystem_posix.cpp  filesystem_posix.h  filesystem_win32.cpp  filesystem_win32.h  packfile.cpp  packfile.h
source/solunar/core/math/: Frustum.cpp  Frustum.h  Intersection.h  Line3.cpp  Line3.h  Plane3.cpp  Plane3.h  boundingbox.cpp  boundingbox.h  math_types.h
source/solunar/core/memory/: allocator.cpp  allocator.h  mallocallocator.cpp  mallocallocator.h  memorymanager.cpp  memorymanager.h
source/solunar/core/object/: object.cpp  object.h  propertymanager.cpp  propertymanager.h  serializableobject.cpp  serializableobject.h  typeinfo.cpp  typeinfo.h  typemanager.cpp  typemanager.h
source/solunar/core/platform/: core_platform.h  core_platform_win32.h
source/solunar/core/utils/: comautoptr.h  common.cpp  common.h  crc32.cpp  crc32.h  fixedarray.cpp  fixedarray.h  iniFile.cpp  iniFile.h  logger.cpp  logger.h  singleton.h  sysevent.cpp  sysevent.h  thread.cpp  thread.h
source/solunar/d3d11drv/: CMakeLists.txt  d3d11bufferimpl.cpp  d3d11bufferimpl.h  d3d11device.cpp  d3d11device.h  d3d11drv_pch.h  d3d11renderer.cpp  d3d11renderer.h  d3d11rendertarget.cpp  d3d11rendertarget.h  d3d11samplerstate.cpp  d3d11samplerstate.h  d3d11shaderprogram.cpp  d3d11shaderprogram.h  d3d11shaderprogrammanager.cpp  d3d11shaderprogrammanager.h  d3d11statemanager.cpp  d3d11statemanager.h  d3d11texture2d.cpp  d3d11texture2d.h  d3d11utils.cpp  d3d11utils.h  d3d11viewsurface.cpp  d3d11viewsurface.h
source/solunar/d3d12drv/: CMakeLists.txt  d3d12bufferimpl.cpp  d3d12bufferimpl.h  d3d12device.cpp  d3d12device.h  d3d12drv_pch.h  d3d12renderer.cpp  d3d12renderer.h  d3d12utils.cpp  d3d12utils.h
source/solunar/engine/: CMakeLists.txt  camera.cpp  camera.h  console.cpp  console.h  debugoverlay.cpp  debugoverlay.h  engine.cpp  engine.h  engineapi.h  enginepch.h  gameinterface.h  inputmanager.cpp  inputmanager.h  inputmanager_dinput.cpp  inputmanager_dinput.h  inputmanager_win32.cpp  inputmanager_win32.h  view.cpp  view.h  worldmanager.cpp  worldmanager.h
source/solunar/engine/ai/: behaviour_tree.cpp  behaviour_tree.h  pathfinding_manager.cpp  pathfinding_manager.h  pathfinding_navigation.h  pathfinding_navigation_graph.cpp  pathfinding_navigation_graph.h  pathfinding_solver.h  pathfinding_solver_astar.cpp  pathfinding_solver_astar.h  pathfinding_solver_dijkstra.cpp  (+1 more)
source/solunar/fmoddrv/: CMakeLists.txt  audio_fmod_shared.cpp  audio_fmod_shared.h  audiomanagerfmod.cpp  audiomanagerfmod.h  audiosourcefmod.cpp  audiosourcefmod.h  fmoddrv_pch.h  musicmanagerfmod.cpp  musicmanagerfmod.h
source/solunar/fps/: CMakeLists.txt  fpsgame.cpp  fpsgamepch.h
source/solunar/fpsgame/: CMakeLists.txt  fpsgame.cpp  fpsgame.h  fpsgamepch.h  shockeventlistener.cpp  shocksignalmanager.cpp
source/solunar/game/: CMakeLists.txt  gamepch.h
source/solunar/gameframework/: CMakeLists.txt  gameapi.h  gamepch.h
source/solunar/gldrv/: CMakeLists.txt  GLShaderProgramManager.cpp  GLShaderProgramManager.h  glbufferimpl.cpp  glbufferimpl.h  gldevice.cpp  gldevice.h  gldrv_pch.h  glformats.cpp  glpostprocessing.cpp  glpostprocessing.h  glrenderer.cpp  glrenderer.h  glrendertarget.cpp  glrendertarget.h  glsamplerstate.cpp  glsamplerstate.h  glshaderprogram.cpp  glshaderprogram.h  glstatemanager.cpp  glstatemanager.h  gltexture2d.cpp  gltexture2d.h
source/solunar/graphics/: CMakeLists.txt  ShaderProgramManager.cpp  ShaderProgramManager.h  animatedmodel.cpp  animatedmodel.h  camerafrustum.cpp  camerafrustum.h  debugrenderer.cpp  debugrenderer.h  fontmanager.cpp  fontmanager.h  gfxcommon.h  graphics.cpp  graphics.h  graphicsapi.h  graphicsobject.cpp  graphicsobject.h  graphicsoptions.cpp  graphicsoptions.h  graphicspch.h  graphicsworld.cpp  graphicsworld.h  ifontmanager.h  image.cpp  image.h  imguimanager.cpp  imguimanager.h  light.cpp  light.h  lightmanager.cpp  lightmanager.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  postfxmanager.cpp  postfxmanager.h  rendercontext.cpp  (+18 more)
source/solunar/main/: CMakeLists.txt  commandline.cpp  engineloop.cpp  engineloop.h  main.cpp  main.h  main_win32.cpp  pch.h  win32_keys.h
source/solunar/miniaudiodrv/: CMakeLists.txt  miniaudio_shared.cpp  miniaudio_shared.h  miniaudiodrv_pch.h  miniaudiomanager.cpp  miniaudiomanager.h  miniaudiomusicmanager.cpp  miniaudiomusicmanager.h  miniaudiosource.cpp  miniaudiosource.h
source/solunar/packer/: CMakeLists.txt  packer.cpp  packer.h
source/solunar/shockgame/: CMakeLists.txt  demogame.cpp  demogame.h  editor_window_level_inspector.cpp  shock_ai_behaviour_tree_factory.cpp  shock_ai_behaviour_tree_factory.h  shock_ai_behaviour_tree_node_sequence.h  shock_ai_behaviour_tree_node_zombie_attack_target.cpp  shock_ai_behaviour_tree_node_zombie_attack_target.h  shock_ai_behaviour_tree_node_zombie_move_to_target.cpp  shock_ai_behaviour_tree_node_zombie_move_to_target.h  shock_ai_behaviour_tree_node_zombie_search_target.cpp  shock_ai_behaviour_tree_node_zombie_search_target.h  shock_ai_behaviour_tree_user_data_types.h  shock_component_ai_behaviourtree.cpp  shock_component_ai_behaviourtree.h  shock_component_ai_round_system.cpp  shock_component_ai_round_system.h  shockaicomponent.cpp  shockaicomponent.h  shockeventlistener.cpp  shockeventlistener.h  shockgame.cpp  shockgame.h  shockgamepch.h  shockgameui.cpp  shockgameui.h  shockplayercontroller.cpp  shockplayercontroller.h  shockprojectilecomponent.cpp  shockprojectilecomponent.h  shocksignalmanager.cpp  shocksignalmanager.h
(+222 files in other folders)
