option(MASTER_GOLD_BUILD "Master gold build (disable any debug or developer stuff)" OFF)

add_subdirectory(core)
add_subdirectory(graphics)
add_subdirectory(d3d11drv)
add_subdirectory(d3d12drv)
add_subdirectory(gldrv)
add_subdirectory(fmoddrv)
add_subdirectory(miniaudiodrv)
add_subdirectory(engine)
add_subdirectory(game)
add_subdirectory(shockgame)
add_subdirectory(main)
